# DCX_PORTFOLIO

HUMAN_STATUS/: pom.xml
HUMAN_STATUS/src/Flask/: make_train2.py  make_train_data3.py
HUMAN_STATUS/src/Flask/project/: 0.1.1  0.9.0  5.3.1  body_language (2).joblib  finalproject_jani_flask_file.py  pyproject.toml  readme조건.txt
HUMAN_STATUS/src/Flask/project/Driver-Drowsiness-Detection-using-flask-main/Driver-Drowsiness-Detection-using-flask-main/: README.md  app.py  drowsiness detection.py  model.py
HUMAN_STATUS/src/Flask/project/Driver-Drowsiness-Detection-using-flask-main/Driver-Drowsiness-Detection-using-flask-main/templates/: index.html  main.css  new.html
HUMAN_STATUS/src/Flask/project/knn_model (1)/: teststestetset.ipynb
HUMAN_STATUS/src/Flask/project/새 폴더/: Bluprint1.py  app.py  common.py  face.py  face1.py  face10.py  face11.py  face12_skeleton_onlyfunction.py  face13.py  face14_skeleton_.py  face15.py  face16.py  face2.py  face3.py  face4.py  face5.py  face6.py  face7.py  face8.py  face9.py  face_2.py  jasung.py  make_train.py  make_train2.py  make_train3.py  make_train_data.py  make_train_data2.py  make_train_data4.py  make_train_data5.py  make_train_data6.py  make_train_data7.py  make_train_data8.py  send.py  test.py  test1.py  test2.py  test3.py  test4.py  train.py  utils.py  (+1 more)
HUMAN_STATUS/src/main/java/ScheduledTasks/: ScheduledTasks.java
HUMAN_STATUS/src/main/resources/: application.properties
HUMAN_STATUS/src/main/resources/templates/: index.html
HUMAN_SYMPTOMS/: pom.xml
HUMAN_SYMPTOMS/src/main/resources/: application.properties
(+82 files in other folders)
